test/e2e/features/agentgateway/inference/testdata/pool.yaml
apiVersion: inference.networking.k8s.io/v1
kind: InferencePool
metadata:
  name: vllm-llama3-8b-instruct
spec:
  targetPorts:
  # vLLM rank 0 will run on the configured port, rank 1 on port+1, etc.
  - number: 8000
  - number: 8001
  selector:
    matchLabels:
      app: vllm-llama3-8b-instruct
  endpointPickerRef:
    failureMode: FailOpen
    name: vllm-llama3-8b-instruct-epp
    port:
      number: 9002
